@@ -4,14 +4,13 @@ import com.google.gson.annotations.SerializedName;
 import com.mojang.logging.LogUtils;
 import com.mojang.realmsclient.dto.GuardedSerializer;
 import com.mojang.realmsclient.dto.ReflectionBasedSerialization;
-import java.io.File;
-import java.io.FileNotFoundException;
-import java.io.IOException;
 import java.nio.charset.StandardCharsets;
+import java.nio.file.Files;
+import java.nio.file.NoSuchFileException;
+import java.nio.file.Path;
 import net.minecraft.client.Minecraft;
 import net.minecraftforge.api.distmarker.Dist;
 import net.minecraftforge.api.distmarker.OnlyIn;
-import org.apache.commons.io.FileUtils;
 import org.slf4j.Logger;
 
 @OnlyIn(Dist.CLIENT)
@@ -29,15 +28,15 @@ public class RealmsPersistence {
     }
 
     public static RealmsPersistence.RealmsPersistenceData readFile() {
-        File var0 = getPathToData();
+        Path var0 = getPathToData();
 
         try {
-            String var1 = FileUtils.readFileToString(var0, StandardCharsets.UTF_8);
+            String var1 = Files.readString(var0, StandardCharsets.UTF_8);
             RealmsPersistence.RealmsPersistenceData var2 = GSON.fromJson(var1, RealmsPersistence.RealmsPersistenceData.class);
             if (var2 != null) {
                 return var2;
             }
-        } catch (FileNotFoundException var31) {
+        } catch (NoSuchFileException var31) {
         } catch (Exception var4) {
             LOGGER.warn("Failed to read Realms storage {}", var0, var4);
         }
@@ -46,17 +45,17 @@ public class RealmsPersistence {
     }
 
     public static void writeFile(RealmsPersistence.RealmsPersistenceData param0) {
-        File var0 = getPathToData();
+        Path var0 = getPathToData();
 
         try {
-            FileUtils.writeStringToFile(var0, GSON.toJson(param0), StandardCharsets.UTF_8);
-        } catch (IOException var3) {
+            Files.writeString(var0, GSON.toJson(param0), StandardCharsets.UTF_8);
+        } catch (Exception var3) {
         }
 
     }
 
-    private static File getPathToData() {
-        return new File(Minecraft.getInstance().gameDirectory, "realms_persistence.json");
+    private static Path getPathToData() {
+        return Minecraft.getInstance().gameDirectory.toPath().resolve("realms_persistence.json");
     }
 
     @OnlyIn(Dist.CLIENT)
